fix: DefaultPostgresFactory should load Postgres version property
Signed-off-by: Jorge Solórzano <jorsol@ongres.com>